--- a/src/stylesheets/Quotes.css
+++ b/src/stylesheets/Quotes.css
@@ -22,3 +22,9 @@
     margin: 15px;
     font-size: 20px;
 }
+
+@media screen and (max-width: 510px) {
+    #quotes-data li {
+        margin-right: 60px;
+    }
+}
